<resources>
    <string name="app_name">ResQSync</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="create_account">Create an Account</string>
    <string name="enter_phone">Enter your phone number to continue</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hey_there">Hey there,</string>
    <string name="signin">Signin</string>
    <string name="sign_up">Signup</string>
    <string name="proceed">Proceed</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="password_mismatch">Passwords mismatch</string>
    <string name="invalid_password_format">Password must include a capital letter, a special character and a number\nMinimum length 8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="resqsync">ResQSync</string>
    <string name="effortless_family_tracking">Effortless Family Tracking</string>
    <string name="onboarding_1_about">Simplify staying connected and secure by effortlessly tracking your loved ones\' locations. Let us handle the worry, &amp; start ensuring their safety now!</string>
    <string name="always_stay_connected">Always Stay Connected</string>
    <string name="onboarding_2_about">Get ready to streamline your journey with instant location updates. From now on, you\'ll never lose sight of what matters most. Let\'s start tracking!</string>
    <string name="privacy_policy_text">By continuing you accept our Privacy Policy and Terms of Use</string>
    <string name="existing_account">Already have a account? Signin</string>
    <string name="new_account">Don\'t have a account yet? Register</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_the_otp_resend">Didn\'t receive the OTP? Resend</string>
    <string name="enter_the_one_time_password">Enter the one time password received on your phone</string>
    <string name="full_name">Full Name</string>
    <string name="enter_details">Enter your details to complete the registration</string>
    <string name="name_required">Name required</string>
    <string name="sign_out">Sign out</string>
    <string name="cant_make_map_requests">You can\'t make map requests</string>
    <string name="manage_account">Manage Account</string>
    <string name="show_your_unique_code">Show your unique code</string>
    <string name="edit_email">Edit your email</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="others">Others</string>
    <string name="whereabouts">Whereabouts</string>
    <string name="family_friends"><![CDATA[Family & Friends]]></string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="emergency">Emergency</string>
    <string name="map">Map</string>
    <string name="contact">Contact</string>
    <string name="joining_code_title">Unique Code</string>
    <string name="joining_code_message">Share your code to allow your family and friends to add you to their circle.</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="family">Family</string>
    <string name="circle_s_name">Circle\'s name</string>
    <string name="create_circle_title">Create your own circle</string>
    <string name="reset">Reset</string>
    <string name="create_circle_message">You can create a new circle and add members into it.</string>
    <string name="add_member_title">Add member to your circle</string>
    <string name="create_circle">Create circle</string>
    <string name="enter_member_code">Enter member code</string>
    <string name="add_member_message">Enter the 6 digit member\'s code to add them to your circle</string>
    <string name="loading">Loading..</string>
    <string name="enter_otp_error">Enter valid OTP</string>
    <string name="share_code_title">Share your Unique Code</string>
    <string name="introducing_your_unique_code">Introducing your Unique Code: Easily share it with loved ones to add them to your app\'s family list for a seamless connection: <br /><b>%s</b></string>
    <string name="emergency_sos">Emergency SOS</string>
    <string name="tap_to_send_sos">Tap to send SOS</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="double_tap_to_call">Double tap to call</string>
    <string name="add_contact">Add contact</string>
    <string name="toggle_primary_contact">Toggle this switch to add this contact as your primary emergency contact. (if existing contact exist, will be overwritten)</string>
    <string name="cancel">Cancel</string>
    <string name="contributors">Contributors</string>
    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="content_description">These are our awesome contributors. You can help ResQSync too by programming, translating, donating and more!</string>
    <string name="license_details">ResQSync is released under the GPL-3.0 and AGPL-3.0 licenses, with the source code available on GitHub.</string>
    <string name="donate_description">You can support ResQSync\'s development by donating. Any amount is deeply appreciated.</string>
    <string name="exit_app">Exit App</string>
    <string name="permissions_title">Permissions Required</string>
    <string name="permission_message">Call, location access(allow all the time) is required for the application to function properly. Please Allow these permission to continue usiing the application...</string>
    <string name="back">Back</string>
    <string name="edit">Tap to edit</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="rotate">Rotate</string>
    <string name="rotation_value">Click to change rotation: %1$s</string>
    <string name="edit_image">Edit Image</string>
</resources>