<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2023 Ashish Yadav <mailtoashish693@gmail.com>
  ~
  ~  This program is free software; you can redistribute it and/or modify it under
  ~  the terms of the GNU General Public License as published by the Free Software
  ~  Foundation; either version 3 of the License, or (at your option) any later
  ~  version.
  ~
  ~  This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  ~  PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License along with
  ~  this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/content_text" />

            <TextView
                android:id="@+id/currentVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contributors"
                android:textColor="@color/black"
                android:textSize="@dimen/content_text" />

            <TextView
                android:id="@+id/contributors_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/content_description" />

            <!--        license-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license"
                android:textColor="@color/black"
                android:textSize="@dimen/content_text" />

            <TextView
                android:id="@+id/license_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/license_details" />

            <!--        donate-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/donate"
                android:textColor="@color/black"
                android:textSize="@dimen/content_text" />

            <TextView
                android:id="@+id/donate_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/donate_description" />

        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>